# .dotfiles

./: .bashrc  .gitconfig  .gitignore  .gitmodules  .ideavimrc  .ohmyenv  .p10k.zsh  .tmux.conf  .vimrc  .wslconfig  .zshrc  AGENTS.md  README.md  bashrc  ideavimrc  lazy-restore.sh  package-lock.json  package.json  rgignore  setup.bat  setup.sh  tmux.conf  zshrc
.aria2/: aria2.conf
.cheat/: .cheat  cheat  jq  rg
.ssh/: config
.vim/: .netrwhist  .vim  1.vim  coc-settings.json  escalt.vim  filetype.vim  foldtext.vim  functions.vim  gvim.vim  im.vim  keymap.vim  mappings.vim  misc.vim  runner.vim  settings.vim  vimrc  whichkey.vim
alacritty/: alacritty.yml  common.toml  mac.toml  wsl.toml
amaven/: amaven.config
aria2/: aria2.conf
cheat/: awk  bash  curl  dig  git  mvn  nmap  ntpdate  qrencode  sh  update-alternatives  vim  xargs  zinit
fcitx5/: config
ghostty/: config
git/: config
hammerspoon/: init.lua  win_win.lua
hypr/: hyprland.conf  hyprland.lua.1
karabiner/: karabiner.json
keyd/: default.conf
kitty/: gruvbox_dark.conf  ime_watcher.py  kitty.conf  linux.conf  macos.conf  tab_bar.py  tabpick.py  tabpick_collect.py  xkb.py
kwin/: AGENTS.md
m2/: settings.xml
niri/: config.kdl
rime/: default.custom.yaml  rime-install.bat  rime-install.sh  rime.lua  rime_ice.custom.yaml  squirrel.custom.yaml  weasel.custom.yaml
scripts/: apt-ppa.sh  apt-requirements.sh  apt-requires.sh  benchmark-nvim-startup.sh  check-nvim-plugin-updates.sh  download-stardict.sh  download-termux-font.sh  install-debian-base-packages.sh  npm-requirements.sh  pip3-ali.sh  pip3-requirements.sh  setup.sh  test_zsh_startup.sh
secrets/: q-secret-env.enc
services/: rclone-mount@.service  wsl-mount.service
skills/: INDEX.md
ssh/: config  config_win
submodule/iocr/: AGENTS.md  README.md  _platform.py  backend_mac.py  backend_wsl.py  iocr.py  pyproject.toml
submodule/iocr/iocr_core/: __init__.py  cli.py  errors.py  image.py  output.py  platform.py
submodule/iocr/iocr_core/ocr/: __init__.py  base.py  factory.py  macos.py  paddle.py  windows.py  wxocr.py
submodule/xsub/: .gitignore  AGENTS.md  README.md  pyproject.toml  xsub.py
submodule/xsub/template/: 1.ass  2.ass
termux/: termux.properties
tmux/: tmux  tmux.conf
transfer/: create_venv.sh  transfer.py
vim/: AGENTS.md  autocmd.vim  coc-settings.json  (+14 more)
(+864 files in other folders)
