[project]
name = "iocr"
version = "0.1.0"
description = "OCR tool for macOS and WSL: read image from clipboard/file/stdin, recognize text, and open result in nvim."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow",
]

[project.optional-dependencies]
macos = ["pyobjc-framework-vision", "pyobjc-framework-quartz"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
iocr = "iocr:main"
