[project]
name = "iocr"
version = "0.1.0"
description = "OCR tool for macOS and WSL: read image from clipboard/file/stdin, recognize text, and open nvim or print stdout."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pillow",
]

[project.optional-dependencies]
macos = ["pyobjc-framework-vision", "pyobjc-framework-quartz"]
paddle = [
    "paddleocr>=3.0.0",
    "paddlepaddle>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
iocr = "iocr_core.cli:main"
oo = "iocr_core.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["iocr_core"]
